# ipa_grasp_learning_framework

./: .gitignore  README.md
Klampt_grasp_simulator/: CMakeLists.txt  package.xml
Klampt_grasp_simulator/common/include/Klampt_grasp_simulator/: calculation_utilities.h  file_utilities.h  grasp_view_program.h  view_program_base.h
Klampt_grasp_simulator/common/src/: calculation_utilities.cpp  file_utilities.cpp  grasp_view_program.cpp  view_program_base.cpp
Klampt_grasp_simulator/data/cameras/: camera_floating_simple.rob
Klampt_grasp_simulator/data/grippers/: cob4_gripper_floating.rob  gripper_floating_base.rob
Klampt_grasp_simulator/data/grippers/resources/: cob4_gripper.urdf  cob4_gripper_finger_1_link.off  cob4_gripper_finger_2_link.off  cob4_gripper_palm_link.off
Klampt_grasp_simulator/data/objects/test/: Cuboid.off  Prism.off
Klampt_grasp_simulator/data/objects/test/raw/: Cuboid.stl  Prism.stl
Klampt_grasp_simulator/data/worlds/: world.xml
Klampt_grasp_simulator/other/: model_converter.sh  off_to_Klampt_obj.sh
Klampt_grasp_simulator/ros/include/Klampt_grasp_simulator/: gripper_interface_base.h  gripper_interface_cob4_old.h  simulation_backend.h
Klampt_grasp_simulator/ros/launch/: gripper_settings.yaml  simulator.launch  simulator2.launch  simulator3.launch  simulator4.launch  simulator5.launch  simulator6.launch  simulator_predict.launch  simulator_settings.yaml  simulator_settings2.yaml  simulator_settings3.yaml  simulator_settings4.yaml  simulator_settings5.yaml  simulator_settings6.yaml  simulator_settings_predict.yaml
Klampt_grasp_simulator/ros/src/: Klampt_grasp_simulator_node.cpp  gripper_interface_base.cpp  gripper_interface_cob4_old.cpp  simulation_backend.cpp
ipa_grasp_learning_framework/: CMakeLists.txt  package.xml
ipa_graspdata_manager/: CMakeLists.txt  package.xml
ipa_graspdata_manager/common/include/ipa_graspdata_manager/: file_utilities.h
ipa_graspdata_manager/common/src/: file_utilities.cpp
ipa_graspdata_manager/ros/include/ipa_graspdata_manager/: graspdata_manager.h
ipa_graspdata_manager/ros/launch/: graspdata_manager.launch  graspdata_manager_offline.launch  graspdata_manager_settings.yaml
ipa_graspdata_manager/ros/src/: graspdata_manager.cpp  ipa_graspdata_manager_node.cpp
ipa_graspdata_processor/: CMakeLists.txt  package.xml
ipa_graspdata_processor/common/include/ipa_graspdata_processor/: visualization_utilities.h
ipa_graspdata_processor/common/src/: visualization_utilities.cpp
ipa_graspdata_processor/ros/include/ipa_graspdata_processor/: graspdata_processor.h
ipa_graspdata_processor/ros/launch/: graspdata_processor.launch  graspdata_processor_offline.launch  graspdata_processor_settings.yaml
ipa_graspdata_processor/ros/src/: graspdata_processor.cpp  ipa_graspdata_processor_node.cpp
ipa_grasppose_dnn/: CMakeLists.txt  package.xml  setup.py
ipa_grasppose_dnn/launch/: predict_graspquality.launch
ipa_grasppose_dnn/nodes/: ipa_predict_graspquality
ipa_grasppose_dnn/scripts/: ipa_create_validation_dataset  ipa_process_results  ipa_train_grasp_dnn
ipa_grasppose_dnn/src/ipa_grasppose_dnn/: __init__.py  datagen.py  model.py  predict.py  training.py
ipa_grasppose_sampler/: CMakeLists.txt  package.xml
ipa_grasppose_sampler/common/include/ipa_grasppose_sampler/: calculation_utilities.h
ipa_grasppose_sampler/common/src/: calculation_utilities.cpp
ipa_grasppose_sampler/ros/include/ipa_grasppose_sampler/: grasppose_sampler.h
ipa_grasppose_sampler/ros/launch/: grasppose_sampler.launch  grasppose_sampler_settings.yaml
ipa_grasppose_sampler/ros/src/: grasppose_sampler.cpp  ipa_grasppose_sampler_node.cpp
ipa_grasppose_srvs/: CMakeLists.txt  package.xml
ipa_grasppose_srvs/srv/: GetGraspPoses.srv  PredictGraspQualities.srv  ProcessGraspData.srv  SaveGraspData.srv
