<?xml version="1.0"?>
<package format="2">
	<name>ipa_grasppose_generator</name>
	<version>1.0.0</version>
	<description>This stack holds packages for generating training data and training a neural network for grasp-related tasks.</description>

	<maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>ipa_graspdata_manager</exec_depend>
	<exec_depend>ipa_graspdata_processor</exec_depend>
	<exec_depend>ipa_grasppose_sampler</exec_depend>
	<exec_depend>ipa_grasppose_srvs</exec_depend>
	<exec_depend>Klampt_grasp_simulator</exec_depend>

	<export>
		<metapackage/>
	</export>
</package>
