<?xml version="1.0"?>
<package format="2">
	<name>ipa_graspdata_manager</name>
	<version>1.0.0</version>
	<description>The package allows to save/load raw grasp data to manage a dataset which can be used for training a neural network upon.</description>

	<maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cv_bridge</depend>
	<depend>geometry_msgs</depend>
	<depend>ipa_grasppose_srvs</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>sensor_msgs</depend>

</package>
