<?xml version="1.0"?>
<package format="2">
	<name>ipa_grasppose_sampler</name>
	<version>1.0.0</version>
	<description>The package allows to sample grasp poses using segmented point clouds.</description>

	<maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>eigen</build_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<exec_depend>libpcl-all</exec_depend>

	<depend>ipa_grasppose_srvs</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>

</package>
