<?xml version="1.0"?>
<package format="2">
	<name>ipa_grasppose_srvs</name>
	<version>1.0.0</version>
	<description>The package contains all the messages needed for the ipa_grasppose_generation project.</description>

	<maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>

	<depend>geometry_msgs</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>sensor_msgs</depend>

</package>
